@@ -1,5 +1,6 @@
 Changes for 1.3.1:
 
+ - fixed master node adding (Eugene)
  - improved installation wizard (Eugene)
  - fixed permission system (Eugene)
  - added availability of multiple user groups selection (Eugene)
